Remove half implemented GC in PyGIBaseInfo, PyGIStruct, and PyGIBoxed

Remove half implemented GC tracking from PyGIBaseInfo as it was not
needed (the implemented was also missing usage of PyObject_GC_New/Track).
Ensure weakref list for PyGIBaseInfo is initialized to NULL and cleared
properly.
Remove invalid calls to PyObject_GC_UnTrack and PyObject_ClearWeakRefs
for both PyGIStruct and PyGIBoxed as these types were not being
advertised as GC aware with Py_TPFLAGS_HAVE_GC.

https://bugzilla.gnome.org/show_bug.cgi?id=677091